OnboardingHub/force-app/main/default/objects/Onboarding_Task__c/Onboarding_Task__c.object-meta.xml
<CustomObject>
    <label>Onboarding Task</label>
    <pluralLabel>Onboarding Tasks</pluralLabel>
    <nameField>
        <label>Task Number</label>
        <type>AutoNumber</type>
        <displayFormat>TASK-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>