OnboardingHub/force-app/main/default/objects/Onboarding_Task__c/fields/New_Hire__c.field-meta.xml
<CustomField>
    <fullName>New_Hire__c</fullName>
    <label>New Hire</label>
    <type>MasterDetail</type>
    <referenceTo>New_Hire__c</referenceTo>
    <relationshipLabel>Onboarding Tasks</relationshipLabel>
    <relationshipName>Onboarding_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>