OnboardingHub/force-app/main/default/objects/Onboarding_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>